# docs/swagger.json
@@ -90,6 +90,29 @@
                 ],
                 "summary": "Удаление аккаунта администратора",
                 "operationId": "deleteAdminProfile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ИД администратора",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Уровень администратора, где 0-не админ, 1 - админ младщего звена, 3 - старший админ",
+                        "name": "adminLevel",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ид пользователя, которого назначают администратором",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -131,6 +154,29 @@
                 ],
                 "summary": "Удаление аккаунта",
                 "operationId": "deleteProfile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ИД администратора",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Уровень администратора, где 0-не админ, 1 - админ младщего звена, 3 - старший админ",
+                        "name": "adminLevel",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ид пользователя, которого назначают администратором",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -172,6 +218,29 @@
                 ],
                 "summary": "Повышение уровня администратора",
                 "operationId": "promotionAdmin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ИД администратора",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Уровень администратора, где 0-не админ, 1 - админ младщего звена, 3 - старший админ",
+                        "name": "adminLevel",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ид пользователя, которого назначают администратором",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -213,6 +282,29 @@
                 ],
                 "summary": "Назначение администратора",
                 "operationId": "setAdmin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ИД администратора",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Уровень администратора, где 0-не админ, 1 - админ младщего звена, 3 - старший админ",
+                        "name": "adminLevel",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ид пользователя, которого назначают администратором",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -254,6 +346,29 @@
                 ],
                 "summary": "Снятие с поста администратора",
                 "operationId": "unSetAdmin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ИД администратора",
+                        "name": "userId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Уровень администратора, где 0-не админ, 1 - админ младщего звена, 3 - старший админ",
+                        "name": "adminLevel",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ид пользователя, которого назначают администратором",
+                        "name": "userid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -1470,6 +1585,17 @@
                 ],
                 "summary": "Регистрация арендодателя",
                 "operationId": "landlordRegister",
+                "parameters": [
+                    {
+                        "description": "Данные для регистрации",
+                        "name": "regDate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/golang-pkg_internal_auth.BusinessUserForRegister"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1611,6 +1737,17 @@
                 ],
                 "summary": "Регистрация",
                 "operationId": "register",
+                "parameters": [
+                    {
+                        "description": "Данные для регистрации",
+                        "name": "regDate",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/golang-pkg_internal_auth.UserForRegister"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
